--- a/index.html
+++ b/index.html
@@ -10,44 +10,44 @@
 		<link rel="stylesheet" href="css/styles.css" />
 		
 		<!--Icono de la página-->
-		<link rel="shortcut icon" href="resources/img/logo.png" />
+		<link rel="shortcut icon" href="resources/images/logo.png" />
 
 		<!--Nombre de la página-->
 		<title>Iker Martín Camba</title>
 
 	</head>
 	<body>
-		<header class="header" id="inicio">
-			<img src="resources/iconos/bx-menu-alt-right.svg" class="hamburger">
-			<nav class="menu-navegacion">
+		<header class="header" id="start">
+			<img src="resources/icons/bx-menu-alt-right.svg" class="hamburger">
+			<nav class="menu-navigation">
 				<a href="">INICIO</a>
-				<a href="#sobre-mi">SOBRE MÍ</a>
-				<a href="#formacion">FORMACIÓN</a>
-				<a href="#experiencia">EXPERIENCIA</a>
-				<a href="#competencias">COMPETENCIAS</a>
-				<a href="#proyectos">PROYECTOS</a>
-				<a href="#contacto">CONTACTO</a>
+				<a href="#about-me">SOBRE MÍ</a>
+				<a href="#education">FORMACIÓN</a>
+				<a href="#experience">EXPERIENCIA</a>
+				<a href="#competencies">COMPETENCIAS</a>
+				<a href="#projects">PROYECTOS</a>
+				<a href="#contact">CONTACTO</a>
 			</nav>
-			<div class="contenedor head">
-				<h1 class="titulo">IKER MARTÍN CAMBA</h1>
+			<div class="container head">
+				<h1 class="title">IKER MARTÍN CAMBA</h1>
 				<p class="copy">Curriculum Vitae Digital</p>
 			</div>
 		</header>
-		<section id="sobre-mi">
-			<a name="sobre-mi"></a>
+		<section id="about-me">
+			<a name="about-me"></a>
 			<div>
-				<img src="resources/img/perfil.jpg" alt="">
+				<img src="resources/images/photo.png" alt="">
 				<h4>SOBRE MÍ</h4>
 				<p>Programador especializado en sitios web y aplicaciones desarrolladas en Java y Kotlin.<br>
-				Con más de 1 año de experiencia en desarrollo de scripts SQL y asistencia de equipos en departamento IT.<br>
+				Con más de 1 año de experience en desarrollo de scripts SQL y asistencia de equipos en departamento IT.<br>
 				Me caracterizo por administrar el tiempo, tanto individualmente como en trabajo en equipo, <br>
 				adaptando cualquier situación para la óptima resolución de problemas.</p>
-				<a href="resources/cv/CV_IkerMartinCamba.pdf" class="descargar-cv">Descargar CV</a>
+				<a href="resources/files/CV_IkerMartinCamba.pdf" class="orange-button">Mostrar CV</a>
 			</div>
 		</section>
-		<section id="formacion">
-			<h4 class="titulo-section">FORMACIÓN</h4>
-			<a name="formacion"></a>
+		<section id="education">
+			<h4 class="title-section">FORMACIÓN</h4>
+			<a name="education"></a>
 			<div class="timeline-items">
 				<div class="timeline-item">
 					<div class="timeline-dot"></div>
@@ -78,9 +78,9 @@
 				</div>
 			</div>
 		</section>
-		<section id="experiencia">
-			<h4 class="titulo-section">EXPERIENCIA LABORAL</h4>
-			<a name="experiencia"></a>
+		<section id="experience">
+			<h4 class="title-section">EXPERIENCIA LABORAL</h4>
+			<a name="experience"></a>
 			<div class="timeline-items">
 				<div class="timeline-item">
 					<div class="timeline-dot"></div>
@@ -115,44 +115,44 @@
 				</div>
 			</div>
 		</section>
-		<section id="competencias">
-			<h4 class="titulo-section">COMPETENCIAS</h4>
-			<a name="competencias"></a>
-			<div id="contenido-competencias">
+		<section id="competencies">
+			<h4 class="title-section">COMPETENCIAS</h4>
+			<a name="competencies"></a>
+			<div id="content-competencies">
 				<h3>MYSQL</h3>
-				<div class="barra-progreso">
+				<div class="progress-bar">
 					<span style="width: 80%;"></span>
 				</div>
 				<h3>HTML</h3>
-				<div class="barra-progreso">
+				<div class="progress-bar">
 					<span style="width: 80%;"></span>
 				</div>
 				<h3>CSS</h3>
-				<div class="barra-progreso">
+				<div class="progress-bar">
 					<span style="width: 60%;"></span>
 				</div>
 				<h3>JAVA</h3>
-				<div class="barra-progreso">
+				<div class="progress-bar">
 					<span style="width: 60%;"></span>
 				</div>
 				<h3>KOTLIN</h3>
-				<div class="barra-progreso">
+				<div class="progress-bar">
 					<span style="width: 60%;"></span>
 				</div>
 				<h3>JAVASCRIPT</h3>
-				<div class="barra-progreso">
+				<div class="progress-bar">
 					<span style="width: 60%;"></span>
 				</div>
 				<h3>PYTHON</h3>
-				<div class="barra-progreso">
+				<div class="progress-bar">
 					<span style="width: 40%;"></span>
 				</div>
 			</div>
-		</section id="idiomas">
+		</section id="languages">
 			<div class="all">
 				<!--Español-->
-				<div class="circulo-envoltura">
-					<div class="circulo">
+				<div class="circle-envoltura">
+					<div class="circle">
 						<div class="mask full-1">
 							<div class="fill-1"></div>
 						</div>
@@ -163,8 +163,8 @@
 					</div>
 				</div>
 				<!--Inglés-->
-				<div class="circulo-envoltura">
-					<div class="circulo">
+				<div class="circle-envoltura">
+					<div class="circle">
 						<div class="mask full-2">
 							<div class="fill-2"></div>
 						</div>
@@ -175,8 +175,8 @@
 					</div>
 				</div>
 				<!--Euskera-->
-				<div class="circulo-envoltura">
-					<div class="circulo">
+				<div class="circle-envoltura">
+					<div class="circle">
 						<div class="mask full-3">
 							<div class="fill-3"></div>
 						</div>
@@ -188,34 +188,56 @@
 				</div>
 			</div>
 		</section>
-		<section id="proyectos">
-			<a name="proyectos"></a>
-			<div>
-				<img src="resources/img/github.png" alt="">
+		<section id="projects">
+			<a name="projects"></a>
+			<div class="github">
+				<img src="resources/images/github.png" alt="">
 				<h4>GitHub</h4>
-				<a href="https://github.com/IkerMartinProg" class="abrir-github">Acceder</a>
+				<a href="https://github.com/IkerMartinCamba" class="black-button">Acceder</a>
 			</div>
+			<!--
+			<div class="mongodb">
+				<img src="resources/images/mongodb.png" alt="">
+				<h4>MongoDB</h4>
+				<a href="https://github.com/IkerMartinProg" class="black-button">Mostrar manual</a>
+			</div>-->
+			<div class="mysql">
+				<img src="resources/images/mysql.png" alt="">
+				<h4>MySQL</h4>
+				<a href="resources/files/Manual_MySQL.pdf" class="black-button">Mostrar manual</a>
+			</div>
+			<!--
+			<div class="kotlin">
+				<img src="resources/images/kotlin.png" alt="">
+				<h4>Kotlin</h4>
+				<a href="https://github.com/IkerMartinProg" class="black-button">Mostrar manual</a>
+			</div>
+			<div class="java">
+				<img src="resources/images/java.png" alt="">
+				<h4>JAVA</h4>
+				<a href="https://github.com/IkerMartinProg" class="black-button">Mostrar manual</a>
+			</div>-->
 		</section>
-		<section id="contacto">
-			<a name="contacto"></a>
-			<div id="contenido-contacto">
+		<section id="contact">
+			<a name="contact"></a>
+			<div id="content-contact">
 				<div>
-					<img src="resources/img/phone.png" alt=""><br>
+					<img src="resources/images/phone.png" alt=""><br>
 					<p>+34 640 750 366</p>
 				</div>
 				<div>
-					<img src="resources/img/linkedin.png" alt=""><br>
-					<a href="https://www.linkedin.com/in/iker-martin-camba-7160a6208" class="descargar-cv">Acceder al perfil</a> 
+					<img src="resources/images/linkedin.png" alt=""><br>
+					<a href="https://www.linkedin.com/in/iker-martin-camba-7160a6208" class="orange-button">Acceder al perfil</a> 
 				</div>
 				<div>
-					<img src="resources/img/email.png" alt=""><br>
+					<img src="resources/images/email.png" alt=""><br>
 					<p>ikermartincamba@gmail.com</p>
 				</div>
 			</div>
 			<br>
 		</section>
 		<footer>
-			<p>Copyright &#169; 2023 Iker Martín Camba - All Rights Reserved.</p>
+			<p>Copyright &#169; 2024 Iker Martín Camba - All Rights Reserved.</p>
 		</footer>
 
 		<script src="javascript/menu.js"></script>
