--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 					<span style="width: 40%;"></span>
 				</div>
 			</div>
-		</section id="languages">
+		</section>
+		<section id="languages">
 			<div class="all">
 				<!--Español-->
 				<div class="circle-envoltura">
