--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<img src="resources/images/photo.png" alt="">
 				<h4>SOBRE MÍ</h4>
 				<p>Programador especializado en sitios web y aplicaciones desarrolladas en Java y Kotlin.<br>
-				Con más de 1 año de experience en desarrollo de scripts SQL y asistencia de equipos en departamento IT.<br>
+				Con más de 1 año de experiencia en desarrollo de scripts SQL y asistencia de equipos en departamento IT.<br>
 				Me caracterizo por administrar el tiempo, tanto individualmente como en trabajo en equipo, <br>
 				adaptando cualquier situación para la óptima resolución de problemas.</p>
 				<a href="resources/files/CV_IkerMartinCamba.pdf" class="orange-button">Mostrar CV</a>
