--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<h4 class="title-section">COMPETENCIAS</h4>
 			<a name="competencies"></a>
 			<div id="content-competencies">
-				<h3>MYSQL</h3>
+				<h3>SQL</h3>
 				<div class="progress-bar">
 					<span style="width: 80%;"></span>
 				</div>
@@ -202,10 +202,10 @@
 				<h4>MongoDB</h4>
 				<a href="https://github.com/IkerMartinProg" class="black-button">Mostrar manual</a>
 			</div>-->
-			<div class="mysql">
-				<img src="resources/images/mysql.png" alt="">
-				<h4>MySQL</h4>
-				<a href="resources/files/Manual_MySQL.pdf" class="black-button">Mostrar manual</a>
+			<div class="sql">
+				<img src="resources/images/sql.png" alt="">
+				<h4>SQL</h4>
+				<a href="resources/files/Manual_SQL.pdf" class="black-button">Mostrar manual</a>
 			</div>
 			<!--
 			<div class="kotlin">
