--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 		<!--Referencia a CSS-->
 		<link rel="stylesheet" href="css/styles.css" />
 		
@@ -42,7 +44,7 @@
 				Con más de 1 año de experiencia en desarrollo de scripts SQL y asistencia de equipos en departamento IT.<br>
 				Me caracterizo por administrar el tiempo, tanto individualmente como en trabajo en equipo, <br>
 				adaptando cualquier situación para la óptima resolución de problemas.</p>
-				<a href="resources/files/CV_IkerMartinCamba.pdf" class="orange-button">Mostrar CV</a>
+				<a href="resources/files/CV_IkerMartinCamba.pdf" class="orange-button"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Mostrar CV</a>
 			</div>
 		</section>
 		<section id="education">
@@ -127,10 +129,6 @@
 				<div class="progress-bar">
 					<span style="width: 80%;"></span>
 				</div>
-				<h3>CSS</h3>
-				<div class="progress-bar">
-					<span style="width: 60%;"></span>
-				</div>
 				<h3>JAVA</h3>
 				<div class="progress-bar">
 					<span style="width: 60%;"></span>
@@ -143,7 +141,11 @@
 				<div class="progress-bar">
 					<span style="width: 60%;"></span>
 				</div>
-				<h3>PYTHON</h3>
+				<h3>CSS</h3>
+				<div class="progress-bar">
+					<span style="width: 40%;"></span>
+				</div>
+				<h3>MONGO DB</h3>
 				<div class="progress-bar">
 					<span style="width: 40%;"></span>
 				</div>
@@ -194,24 +196,23 @@
 			<div class="github">
 				<img src="resources/images/github.png" alt="">
 				<h4>GitHub</h4>
-				<a href="https://github.com/IkerMartinCamba" class="black-button">Acceder</a>
+				<a href="https://github.com/IkerMartinCamba" class="black-button">Acceso al perfil</a>
 			</div>
-			<!--
 			<div class="mongodb">
 				<img src="resources/images/mongodb.png" alt="">
 				<h4>MongoDB</h4>
-				<a href="https://github.com/IkerMartinProg" class="black-button">Mostrar manual</a>
-			</div>-->
+				<a href="resources/files/Manual_MongoDB.pdf" class="black-button"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Manual</a>
+			</div>
 			<div class="sql">
 				<img src="resources/images/sql.png" alt="">
 				<h4>SQL</h4>
-				<a href="resources/files/Manual_SQL.pdf" class="black-button">Mostrar manual</a>
+				<a href="resources/files/Manual_SQL.pdf" class="black-button"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Manual</a>
 			</div>
 			<!--
 			<div class="kotlin">
 				<img src="resources/images/kotlin.png" alt="">
 				<h4>Kotlin</h4>
-				<a href="https://github.com/IkerMartinProg" class="black-button">Mostrar manual</a>
+				<a href="resources/files/Kotlin_Introducción.pdf" class="black-button"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i> Presentación</a>
 			</div>
 			<div class="java">
 				<img src="resources/images/java.png" alt="">
@@ -228,7 +229,7 @@
 				</div>
 				<div>
 					<img src="resources/images/linkedin.png" alt=""><br>
-					<a href="https://www.linkedin.com/in/iker-martin-camba-7160a6208" class="orange-button">Acceder al perfil</a> 
+					<a href="https://www.linkedin.com/in/iker-martin-camba-7160a6208" class="orange-button">Acceso al perfil</a> 
 				</div>
 				<div>
 					<img src="resources/images/email.png" alt=""><br>
